--- a/about.html
+++ b/about.html
@@ -25,19 +25,22 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- Plyr -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-     <!-- Javascript -->
-     
-     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-     <script type="module" defer src="js/about.js"></script>
+    <!-- Javascript -->
+
+    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <script type="module" defer src="js/about.js"></script>
   </head>
   <body>
     <section class="nav-con">
@@ -54,6 +57,7 @@
             <li><a href="victoriacrosses.html">Victoria Crosses</a></li>
             <li><a href="donors.html">Donors</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#" class="donate-button">Donate</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -116,29 +120,68 @@
         <div class="container">
           <h2>Phases of the Memorial</h2>
           <div class="phase phase-1 grid-con">
-            <img
-              src="images/phase1.jpg"
-              alt="Phase 1"
-              class="col-span-full m-col-span-6"
-            />
-            <div class="col-span-full m-col-span-6">
-              <h3>Phase 1: Living Guard of Honour</h3>
-              <p>Completed in May 2018 for the WWI Centennial.</p>
+            <h3 class="col-span-full">Phase 1: Living Guard of Honour</h3>
+            <div class="phase-img col-span-full m-col-span-6">
+              <img src="images/phase1.jpg" alt="Phase 1" />
+            </div>
+            <div class="phase-img col-span-full m-col-span-6">
+              <p>
+                Completed in May 2018 for the WWI Centennial, the Living Guard
+                of Honour was the first step in commemorating the bravery of
+                Indian and Canadian soldiers who fought side by side. This phase
+                introduced a ceremonial space featuring symbolic elements that
+                reflect the unity and sacrifice of these soldiers. The Living
+                Guard of Honour consists of a formation of trees representing
+                the enduring bond between the two nations, symbolizing strength,
+                resilience, and remembrance.
+              </p>
+            </div>
+            <div class="col-span-full">
+              <p>
+                The trees stand tall like soldiers on the battlefield,
+                representing those who never returned home. Each tree is
+                dedicated to a regiment or battalion that played a crucial role
+                in World War I. The space also includes plaques with
+                inscriptions that tell the story of the soldiers’ struggles,
+                courage, and contributions. The unveiling ceremony in 2018 was
+                attended by veterans, historians, and families of the fallen,
+                ensuring that their memories live on for future generations.
+              </p>
             </div>
           </div>
           <div class="phase phase-2 grid-con">
-            <div class="col-span-full m-col-span-6">
-              <h3>Phase 2: Granite Rock Memorial</h3>
+            <h3 class="col-span-full">Phase 2: Granite Rock Memorial</h3>
+            <div class="phase-img col-span-full m-col-span-6">
               <p>
-                Featuring hand-carved battlefield scenes. Target completion:
-                November 11, 2026.
+                The second phase of the memorial, set to be completed by
+                November 11, 2026, will feature a Granite Rock Memorial with
+                hand-carved battlefield scenes. These intricate carvings will
+                depict significant moments from battles such as Ypres, Neuve
+                Chapelle, the Somme, and Vimy Ridge, where Indian and Canadian
+                soldiers fought side by side.
               </p>
             </div>
-            <img
-              src="images/phase2.jpg"
-              alt="Phase 2"
-              class="col-span-full m-col-span-6"
-            />
+            <div class="phase-img col-span-full m-col-span-6">
+              <img src="images/phase2.jpg" alt="Phase 2" />
+            </div>
+            <div class="col-span-full">
+              <p>
+                The memorial will serve as a lasting tribute, etched in stone,
+                to remind visitors of the soldiers' hardships and sacrifices.
+                The battlefield carvings will be created by skilled artisans who
+                will ensure that every detail—from the expressions of the
+                soldiers to the chaotic yet courageous battle scenes—captures
+                the essence of war.
+              </p>
+              <p>
+                Additionally, the Granite Rock Memorial will have an interactive
+                digital display, allowing visitors to learn about individual
+                soldiers’ stories, the history of each regiment, and personal
+                letters written from the frontlines. This will create an
+                immersive and educational experience, ensuring that the
+                sacrifices made over a century ago are never forgotten.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -149,11 +192,35 @@
           <ul>
             <li>
               Recognizing the 135,000+ Indian soldiers who fought alongside
-              Canadians.
+              Canadians: The memorial serves as a tribute to the Indian soldiers
+              who fought shoulder to shoulder with Canadian forces during World
+              War I. Their contributions, courage, and resilience on the
+              battlefield played a vital role in key battles, yet their stories
+              have often been overlooked in mainstream historical narratives. By
+              recognizing their service, the memorial aims to bring their
+              sacrifices into the public consciousness and ensure they receive
+              the respect and remembrance they deserve.
             </li>
-            <li>Preserving stories of bravery and sacrifice.</li>
             <li>
-              Educating the public on this lesser-known chapter of history.
+              Preserving stories of bravery and sacrifice: Many Indian and
+              Canadian soldiers displayed extraordinary bravery, enduring harsh
+              conditions, intense combat, and significant hardships in their
+              pursuit of freedom and peace. This memorial will safeguard their
+              stories, ensuring that their heroism is not forgotten. Through
+              historical records, personal accounts, and visual storytelling, it
+              will serve as a permanent space where future generations can learn
+              about the immense sacrifices made on the battlefield.
+            </li>
+            <li>
+              Educating the public on this lesser-known chapter of history: The
+              collaboration between Indian and Canadian soldiers in World War I
+              remains an underrepresented part of military history. This
+              memorial seeks to bridge that gap by providing educational
+              resources, historical insights, and engaging narratives that
+              highlight the significance of their contributions. Schools,
+              researchers, and visitors will have access to a wealth of
+              information, fostering a deeper appreciation of the shared history
+              and values that bind Canada and India.
             </li>
           </ul>
         </div>
@@ -235,7 +302,5 @@
         <p>Designed with <i class="fa fa-heart"></i> by M.A.A.K.E</p>
       </div>
     </footer>
-
-   
   </body>
 </html>
