--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
             <li><a href="victoriacrosses.html">Victoria Crosses</a></li>
             <li><a href="donors.html">Donors</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#" class="donate-button">Donate</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -85,10 +86,10 @@
             <i class="fa fa-phone"></i>
             <p>Phone: +1 (123) 456-7890</p>
           </div>
-          <div class="contact-item">
+          <!-- <div class="contact-item">
             <i class="fa fa-globe"></i>
             <p>Website: <a href="#">www.brothersinarmsmemorial.com</a></p>
-          </div>
+          </div> -->
         </div>
         <div class="social-media">
           <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
@@ -97,7 +98,7 @@
           <a href="#" class="social-icon"><i class="fa fa-linkedin"></i></a>
           <a href="#" class="social-icon"><i class="fa fa-youtube"></i></a>
         </div>
-        <a href="donors.html" class="donate-button">Donate Now</a>
+        <a href="#" class="donate-button">Donate</a>
       </section>
 
       <section class="contact-form">
