--- a/donors.html
+++ b/donors.html
@@ -54,6 +54,7 @@
             <li><a href="victoriacrosses.html">Victoria Crosses</a></li>
             <li><a href="donors.html">Donors</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#" class="donate-button">Donate</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -64,8 +65,7 @@
       <div class="header-content">
         <h1>Support Our Cause – Make a Difference Today</h1>
         <p>
-          Donate today and help us make a lasting impact. <br />Together, we can
-          build a better future!
+          Donate today and help us make a lasting impact. Together, we can build a better future!
         </p>
       </div>
     </header>
