Improving Victoria Crosses
This commit will mainly about enhancing stuff in Victoria Crosses page as per feedback

--- a/history_stories.html
+++ b/history_stories.html
@@ -173,7 +173,7 @@
         </div>
       </section> -->
 
-      <section class="featured-stories section grid-con">
+      <section id="stories" class="featured-stories section grid-con">
         <h2 class="col-span-full">Personal Stories from Soldiers</h2>
 
         <div class="story col-span-full m-col-span-4" data-lightbox="story1">
