--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- Plyr -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <!-- Javascript -->
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script type="module" defer src="js/home.js"></script>
   </head>
@@ -142,7 +143,7 @@
       </div>
 
       <div class="see-more-container col-span-full">
-        <a href="history_stories.html#personal-stories" class="read-more"
+        <a href="history_stories.html#stories" class="read-more"
           >Read More <i class="fa fa-arrow-right"></i
         ></a>
       </div>
